--- a/sgfx/sgfx/CMakeLists.txt
+++ b/sgfx/sgfx/CMakeLists.txt
@@ -2,29 +2,22 @@ cmake_minimum_required(VERSION 2.8.11)
 
 include(CheckCXXCompilerFlag)
 
-function(enable_cxx_compiler_flag_if_supported flag)
-	string(FIND "${CMAKE_CXX_FLAGS}" "${flag}" flag_already_set)
-	if(flag_already_set EQUAL -1)
-		check_cxx_compiler_flag("${flag}" flag_supported)
-		if(flag_supported)
-			set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${flag}" PARENT_SCOPE)
-		endif()
-		unset(flag_supported CACHE)
-	endif()
-endfunction()
-
 project(libsgfx)
 
 find_package(glfw3)
 find_package(GLEW)
 find_package(OpenGL)
 
-set(CMAKE_CXX_STANDARD 17)
-enable_cxx_compiler_flag_if_supported("-Wall")
-enable_cxx_compiler_flag_if_supported("-pedantic")
-enable_cxx_compiler_flag_if_supported("-Werror")
+if(MSVC)
+	add_definitions(-DNOMINMAX)
+else()
+	add_definitions(-Wall)
+	add_definitions(-pedantic)
+	add_definitions(-Werror)
+endif(MSVC)
 
-add_library(sgfx STATIC src/canvas.cpp src/primitives.cpp src/window.cpp)
+add_library(sgfx STATIC src/canvas.cpp src/primitives.cpp src/window.cpp src/image.cpp)
+set_target_properties(sgfx PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
 target_include_directories(sgfx PUBLIC include)
 target_link_libraries(sgfx glfw GLEW::GLEW OpenGL::GL)
 
