--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,3 @@
 
-.vs/ProjectSettings.json
-.vs/slnx.sqlite
-.vs/the_shape_of_data/v16/.suo
-.vs/the_shape_of_data/v16/Browse.VC.opendb
-.vs/the_shape_of_data/v16/Browse.VC.db
-.vs/the_shape_of_data/v16/ipch/AutoPCH/3cf90d5c6bf91cdd/MAIN.ipch
-.vscode/ipch/28cf37f4d33df8b6/MAIN.ipch
-.vscode/ipch/5ee948b0352afc8c/IMAGE.ipch
-.vscode/ipch/5ee948b0352afc8c/IMAGE.ipch
-.vscode/ipch/8f6762562b24054d/CANVAS.ipch
-.vscode/ipch/5ee948b0352afc8c/IMAGE.ipch
-.vscode/ipch/8f6762562b24054d/CANVAS.ipch
+.vs
+.vscode
