implements RLE encoding/decoding

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,6 @@ if(SGFX_EXAMPLES)
 	add_subdirectory(examples/colorkey)
 #	add_subdirectory(examples/huffman)
 	add_subdirectory(examples/ppm)
-#	add_subdirectory(examples/rle)
+	add_subdirectory(examples/rle)
     add_subdirectory(examples/snake)
 endif()
